removed netflix clone and added merito project

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 Crown store is a full stack e-commerce store that allows users to purchase items and checkout. It's built with functional React components, uses Firebase for backend and payments via Stripe API. 
               </p>
               <a
-                href="./project-1.html"
+                href="./https://bejewelled-biscochitos-26c422.netlify.app/project-1.html"
                 class="btn btn--med btn--theme dynamicBgClr"
                 >Learn more</a
               >
@@ -175,16 +175,16 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/img/Netflix-clone-home-screen.png"
+                src="./assets/img/merito-app-landing-page.png"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Netflix Clone</h3>
+              <h3 class="projects__row-content-title">Merito App</h3>
               <p class="projects__row-content-desc">
-                A clone of Netflix with YouTube API to render videos based on certain categories and allows to view and like videos and add to my list using backend database Hasura with NeonDB. Authentication done using password-less login using Magic. 
+                A testimonials collecting app that allows users to login and create a form to collect feedback on their website allowing users to copy embed code of form to collect testimonial data submitted by customers and to approve/reject the testimonial and display them in a responses page. 
               </p>
               <a
                 href="./project-3.html"
