--- a/project-3.html
+++ b/project-3.html
@@ -85,11 +85,11 @@
         <h1 class="heading-primary">Project 3</h1>
         <div class="project-cs-hero__info">
           <p class="text-primary">
-            A clone of Netflix using NextJS that allows user to login without password via magic link sent to email and view categories of videos and playback videos and add to my list based on liked videos. Implemented YouTube API to get videos and Hasura database to store in backend.
+            A testimonials app that allows users to create custom testimonal collection form and use embed code to get collected testimonials from customers and display them in a responses page to approve/deny the testimonial.
           </p>
         </div>
         <div class="project-cs-hero__cta">
-          <a href="https://cheery-marshmallow-2110cc.netlify.app/" class="btn btn--bg" target="_blank">Live Link</a>
+          <a href="" class="btn btn--bg" target="_blank">Live Link</a>
         </div>
       </div>
     </section>
@@ -98,7 +98,7 @@
         <div class="project-details__content">
           <div class="project-details__showcase-img-cont">
             <img
-              src="./assets/img/netflix-categories.png"
+              src="./assets/img/create-form-page.png"
               alt="Project Image"
               class="project-details__showcase-img"
             />
@@ -107,10 +107,10 @@
             <div class="project-details__desc">
               <h3 class="project-details__content-title">Project Overview</h3>
               <p class="project-details__desc-para">
-                It has a main home page and uses pages route structure of NextJS. A video page to view the video and playback controls are based on YouTube API.
+                It has a landing page with features, pricing and call to action sections. It contains a Dashboard for users to create forms to collect testimonial data and view the embed code and to copy paste it.
               </p>
               <p class="project-details__desc-para">
-                Users can view videos and add to my list by liking them. Unliking them will remove them from my list. Login is handled using Magic API passwordless login using a link via email. 
+                Users can create testimonial collection form, delete, view responses and approve/reject feedback. 
               </p>
             </div>
             <div class="project-details__tools-used">
@@ -121,20 +121,20 @@
                 <div class="skills__skill">JavaScript</div>
                 <div class="skills__skill">React</div>
                 <div class="skills__skill">NextJS</div>
-                <div class="skills__skill">Hasura</div>
-                <div class="skills__skill">YouTube API</div>
+                <div class="skills__skill">Prisma</div>
+                <div class="skills__skill">Clerk API</div>
               </div>
             </div>
             <div class="project-details__links">
               <h3 class="project-details__content-title">See Live</h3>
               <a
-                href="https://cheery-marshmallow-2110cc.netlify.app/"
+                href=""
                 class="btn btn--med btn--theme project-details__links-btn"
                 target="_blank"
                 >Live Link</a
               >
               <a
-                href="https://github.com/deepanm87/netflix-clone"
+                href="https://github.com/deepanm87/merito-app"
                 class="btn btn--med btn--theme-inv project-details__links-btn"
                 target="_blank"
                 >Code Link</a
