fix broken link for project 2

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 Crown store is a full stack e-commerce store that allows users to purchase items and checkout. It's built with functional React components, uses Firebase for backend and payments via Stripe API. 
               </p>
               <a
-                href="./https://bejewelled-biscochitos-26c422.netlify.app/project-1.html"
+                href="./project-1.html"
                 class="btn btn--med btn--theme dynamicBgClr"
                 >Learn more</a
               >
