added new project details

--- a/index.html
+++ b/index.html
@@ -154,16 +154,16 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/img/recipes-home-page.png"
+                src="./assets/img/shopr-home.png"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Recipes App</h3>
+              <h3 class="projects__row-content-title">Shopr App</h3>
               <p class="projects__row-content-desc">
-                A recipes app built using React Router 7 that shows a home page of all the user created recipes with image. It also allows to create, edit and delete recipes and a pantry page to store ingredients and passwordless login via magic link with email. 
+                A customizable e-commerce app that uses Sanity CMS backend to allow users to add custom products with a name, description, image, price and stock quantity and supports authentication, payments via Stripe, applying discount codes and search and filtering of products. 
               </p>
               <a
                 href="./project-2.html"
