--- a/project-2.html
+++ b/project-2.html
@@ -85,7 +85,7 @@
         <h1 class="heading-primary">Project 2</h1>
         <div class="project-cs-hero__info">
           <p class="text-primary">
-            A recipes app that allows user to view and create recipes and a pantry page to store ingredients and allows passwordless login via magic link sent to email.
+            A customizable e-commerce app with a Sanity CMS back-end that allows users to create and display products with their name, description and an image and to display if in stock or not.
           </p>
         </div>
         <div class="project-cs-hero__cta">
@@ -98,7 +98,7 @@
         <div class="project-details__content">
           <div class="project-details__showcase-img-cont">
             <img
-              src="./assets/img/create-recipe-page.png"
+              src="./assets/img/stripe-checkout.png"
               alt="Project Image"
               class="project-details__showcase-img"
             />
@@ -107,10 +107,10 @@
             <div class="project-details__desc">
               <h3 class="project-details__content-title">Project Overview</h3>
               <p class="project-details__desc-para">
-                Users can create recipes with the ingredient name and quantity, instructions, duration and attach a file with the image of the recipe and allows to edit, delete and the newly added recipes will be showcased on the home page.
+                Users can create products to be displayed in store and we can add to basket, remove from basket, checkout via stripe payments and view order details of purchased orders.
               </p>
               <p class="project-details__desc-para">
-                Login is done using mailgun API service to allow passwordless login via email and also created a pantry page to show list of all ingredients with the ability to add, delete and edit them in shelves. A theme switcher to change the color theme is also provided and with the ability to logout.
+                Authentication via Clerk API using Google and email/password login. It also provides a custom backend using Sanity CMS to be able to add, edit and delete product data and view orders and categories of items. If an item's stock is updated to 0, it will not be available for purchase and is marked as out of stock. It also allows to search for products via keyword and allows to view items by category. It also provides a visual live editor in backend to make changes.
               </p>
             </div>
             <div class="project-details__tools-used">
@@ -120,23 +120,23 @@
                 <div class="skills__skill">CSS</div>
                 <div class="skills__skill">JavaScript</div>
                 <div class="skills__skill">React</div>
-                <div class="skills__skill">React Router 7</div>
-                <div class="skills__skill">GIT</div>
-                <div class="skills__skill">Prisma DB</div>
-                <div class="skills__skill">Docker</div>
-                <div class="skills__skill">Mailgun API</div>
+                <div class="skills__skill">NextJS</div>
+                <div class="skills__skill">Sanity CMS</div>
+                <div class="skills__skill">TypeScript</div>
+                <div class="skills__skill">Stripe API</div>
+                <div class="skills__skill">Clerk API</div>
               </div>
             </div>
             <div class="project-details__links">
               <h3 class="project-details__content-title">See Live</h3>
               <a
-                href="https://sparkling-valkyrie-7f3777.netlify.app/"
+                href="https://github.com/deepanm87/shopr-app"
                 class="btn btn--med btn--theme project-details__links-btn"
                 target="_blank"
                 >Live Link</a
               >
               <a
-                href="https://github.com/deepanm87/recipes-app"
+                href="https://github.com/deepanm87/shopr-app"
                 class="btn btn--med btn--theme-inv project-details__links-btn"
                 target="_blank"
                 >Code Link</a
