--- a/project-2.html
+++ b/project-2.html
@@ -89,7 +89,7 @@
           </p>
         </div>
         <div class="project-cs-hero__cta">
-          <a href="https://sparkling-valkyrie-7f3777.netlify.app/" class="btn btn--bg" target="_blank">Live Link</a>
+          <a href="https://shopr-app-two.vercel.app/" class="btn btn--bg" target="_blank">Live Link</a>
         </div>
       </div>
     </section>
@@ -130,7 +130,7 @@
             <div class="project-details__links">
               <h3 class="project-details__content-title">See Live</h3>
               <a
-                href="https://github.com/deepanm87/shopr-app"
+                href="https://shopr-app-two.vercel.app/"
                 class="btn btn--med btn--theme project-details__links-btn"
                 target="_blank"
                 >Live Link</a
